# iam-roles-anywhere

./: .gitignore  CHANGELOG.md  Justfile  LICENSE  README.md  flake.nix  pyproject.toml  release-please-config.json  shells.nix
.github/workflows/: ci.yaml  cli.yaml  cloudformation.yaml  release.yaml
docs/: KUBERNETES.md  REFACTOR-CDK.md  TODO.md  cli-design.md
examples/hosts/: README.md  full-options.nix  minimal.nix  multi-role.nix  single-role-agenix.nix  single-role-sops.nix
examples/k8s/: README.md
iam-ra-cdk/: .gitignore  cdk.json  package-lock.json  package.json  tsconfig.json
iam-ra-cdk/lib/constructs/: certificate-issuer.ts  host.ts
iam-ra-cdk/lib/constructs/certificate-authority/: index.ts  pca-existing.ts  pca-managed.ts  self-managed.ts  types.ts
iam-ra-cdk/lib/lambdas/: ca-generator.ts  cert-issuer.ts
iam-ra-cdk/lib/stacks/: host-stack.ts  infra-stack.ts
iam-ra-cdk/lib/util/: lambda-bundling.ts
iam-ra-cdk/nix/: default.nix
iam-ra-cdk/test/: iam-ra-cdk.test.ts
iam-ra-cli/: pyproject.toml
iam-ra-cli/iam_ra_cli/: __init__.py
iam-ra-cli/iam_ra_cli/commands/: init.py  onboard.py
iam-ra-cli/iam_ra_cli/data/cloudformation/: Makefile  README.md  account-iamra-stack.yaml  account-rootca-stack.yaml  host-stack.yaml  pyproject.toml  samconfig.toml
iam-ra-cli/iam_ra_cli/data/cloudformation/ca_generator/: app.py
iam-ra-cli/iam_ra_cli/data/cloudformation/certificate_issuer/: app.py  requirements.txt
iam-ra-cli/iam_ra_cli/lib/: aws.py  cfn.py  sops.py
iam-ra-cli/nix/: default.nix  python.nix
lib/: _unused.nix  default.nix
modules/: aws-profile.nix  default.nix  packages.nix  validation.nix
nix/: checks.nix  lib.nix  module-aws-profile.nix  module-options.nix  module-packages.nix  module-validation.nix  module.nix  package.nix
scripts/: sync-version.py
src/iam_ra_cli/: __init__.py  main.py
src/iam_ra_cli/commands/: __init__.py  ca.py  common.py  destroy.py  host.py  init.py  k8s.py  migrate.py  onboard.py  role.py  status.py
src/iam_ra_cli/data/cloudformation/: host.yaml  init.yaml  role.yaml  rootca-pca-existing.yaml  rootca-pca-new.yaml  rootca-self-signed.yaml
src/iam_ra_cli/lib/: aws.py  cfn.py  crypto.py  errors.py  k8s.py  paths.py  result.py  sops.py  state.py  templates.py
src/iam_ra_cli/lib/storage/: __init__.py  file.py  s3.py
src/iam_ra_cli/models/: __init__.py
src/iam_ra_cli/operations/: __init__.py  ca.py  host.py  infra.py  role.py  secrets.py
src/iam_ra_cli/workflows/: __init__.py  ca.py  destroy.py  host.py  init.py  k8s.py  migrate.py  role.py  status.py
tests/: conftest.py  default.nix  test_ca_operations.py  test_cfn.py  test_commands_host.py  test_crypto.py  test_format_error.py  test_host_operations.py  test_json_output.py  test_k8s.py  test_models.py  test_operations_role.py  test_result.py  test_state.py  test_storage_s3.py  test_workflow_ca.py  test_workflow_host.py  test_workflow_migrate.py  test_workflow_role.py
tests/nix-integration/: flake.nix
