# UV Workspace root - not a package itself
# This file defines the workspace and shared configuration
# Do not add [project] section as this is not a distributable package

[tool.uv.workspace]
members = ["iam-ra-cli"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "moto>=5.0.0",
    "mypy>=1.5.0",
    "ruff>=0.4.0",
    "boto3-stubs[essential]>=1.34.0",
]

[tool.uv]
# Centralized version constraints for all workspace members
constraint-dependencies = [
    # AWS SDK
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "moto>=5.0.0",
    # Linting/typing
    "mypy>=1.5.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["iam-ra-cli/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
