[project]
name = "iam-ra-cli"
version = "0.1.0"
description = "CLI for managing IAM Roles Anywhere infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "boto3>=1.34.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "cryptography>=42.0.0",
]

[project.scripts]
iam-ra = "iam_ra_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iam_ra_cli"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "moto[all]>=5.0.0",
    "mypy>=1.5.0",
    "ruff>=0.4.0",
    "boto3-stubs[cloudformation,s3,ssm,secretsmanager,sts]>=1.34.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
