[project]
name = "iam-ra-cli"
version = "0.1.0"
description = "CLI for managing IAM Roles Anywhere infrastructure"
readme = "README.md"
requires-python = ">=3.11"

# Versions are constrained by root pyproject.toml [tool.uv.constraint-dependencies]
dependencies = [
    "click",
    "boto3",
    "rich",
    "pyyaml",
]

[project.scripts]
iam-ra = "iam_ra_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iam_ra_cli"]
